--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -10,7 +10,7 @@
         <span class="nav-link">{{ request.user.username }}</span>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'logout' %}">Salir</a>
+        <a class="nav-link" href="{% url 'login' %}">Salir</a>
       </li>
     </ul>
   </div>
