--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -52,13 +52,15 @@
       <a class="nav-link" href="{% url 'perfil' %}">
         <i class="cil-user"></i> Mi cuenta
     </a>
-    {% if request.user.is_staff %}
+
+
+   <!--  {% if request.user.is_staff %}
     <li class="nav-item mt-auto">
       <a class="nav-link text-danger" href="/admin/">
         <i class="cil-settings"></i> Admin
       </a>
     </li>
-    {% endif %}
-    
+    {% endif %}  -->
+  
   </ul>
 </aside>
