--- a/templates/users/list.html
+++ b/templates/users/list.html
@@ -66,7 +66,6 @@
 </div>
 
 <!-- Modal Crear -->
-<!-- Modal Crear -->
 <div class="modal fade" id="createUserModal" tabindex="-1" aria-hidden="true">
   <div class="modal-dialog modal-lg modal-dialog-centered">
     <div class="modal-content shadow">
@@ -131,11 +130,12 @@
                   data-coreui-dismiss="modal">
             Cancelar
           </button>
-          <button type="submit" class="btn btn-success">
-            <i class="cil-save me-1"></i> Guardar
-          </button>
+            <button type="submit"
+                    name="create-submit"
+                    class="btn btn-success">
+              <i class="cil-save me-1"></i> Guardar
+            </button>
         </div>
-
       </form>
     </div>
   </div>
